Made the edit and delete button have rounded corners.

--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -11,10 +11,10 @@
         android:id="@+id/textViewEntryTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_weight="1"
-        android:fontFamily="@font/inter_medium"
+        android:fontFamily="@font/inter_semibold"
         android:text="@string/title"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewEntryAuthor"
@@ -25,12 +25,12 @@
         android:id="@+id/textViewEntryYear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginBottom="16dp"
         android:layout_weight="1"
         android:fontFamily="@font/inter_medium"
         android:text="@string/year"
-        android:textSize="14sp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/textViewEntryAuthor" />
@@ -39,7 +39,7 @@
         android:id="@+id/textViewEntryAuthor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_weight="1"
         android:fontFamily="@font/inter_medium"
         android:text="@string/author"
@@ -75,32 +75,33 @@
 
     <ImageButton
         android:id="@+id/btnEdit"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="24dp"
-        android:background="?android:selectableItemBackgroundBorderless"
+        android:background="@drawable/round_img_btn"
+        android:backgroundTint="@color/spanish_viridian"
         android:contentDescription="@string/edit_book"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/divider3"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_edit" />
 
     <ImageButton
         android:id="@+id/btnDelete"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="24dp"
-        android:background="?android:selectableItemBackgroundBorderless"
+        android:background="@drawable/round_img_btn"
+        android:backgroundTint="@color/cinnabar"
+        android:contentDescription="@string/delete_book"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_delete"
-        android:contentDescription="@string/delete_book" />
+        app:srcCompat="@drawable/ic_delete" />
 
     <View
         android:id="@+id/divider3"
