--- a/app/src/main/res/layout/dialog_add_book_layout.xml
+++ b/app/src/main/res/layout/dialog_add_book_layout.xml
@@ -43,6 +43,7 @@
         android:hint="@string/enter_title"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textColorHint="#757575"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,6 +62,7 @@
         android:hint="@string/enter_name"
         android:inputType="textPersonName"
         android:minHeight="48dp"
+        android:textColorHint="#757575"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,6 +81,7 @@
         android:hint="@string/enter_year"
         android:inputType="number"
         android:minHeight="48dp"
+        android:textColorHint="#757575"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
