--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    app:cardElevation="5dp"
+    app:cardCornerRadius="15dp"
+    android:layout_margin="4dp">
 
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textViewEntryTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
         android:layout_weight="1"
         android:fontFamily="@font/inter_semibold"
@@ -25,7 +30,7 @@
         android:id="@+id/textViewEntryYear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="10dp"
         android:layout_marginBottom="16dp"
         android:layout_weight="1"
         android:fontFamily="@font/inter_medium"
@@ -39,7 +44,7 @@
         android:id="@+id/textViewEntryAuthor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="10dp"
         android:layout_weight="1"
         android:fontFamily="@font/inter_medium"
         android:text="@string/author"
@@ -62,7 +67,7 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="40dp"
+        android:layout_width="48dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:contentDescription="@string/book_icon"
@@ -75,8 +80,8 @@
 
     <ImageButton
         android:id="@+id/btnEdit"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="24dp"
@@ -90,10 +95,10 @@
 
     <ImageButton
         android:id="@+id/btnDelete"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/round_img_btn"
         android:backgroundTint="@color/cinnabar"
@@ -112,5 +117,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnDelete"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.cardview.widget.CardView>
