--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="40dp"
-        android:backgroundTint="@color/spanish_viridian_dark"
+        android:backgroundTint="@color/spanish_viridian"
         android:backgroundTintMode="src_atop"
         android:contentDescription="@string/add_new_book"
         android:src="@drawable/ic_plus"
