--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -14,15 +14,20 @@
 
     <TextView
         android:id="@+id/textViewEntryTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_weight="1"
+        android:ellipsize="end"
         android:fontFamily="@font/inter_semibold"
+        android:maxLines="1"
         android:text="@string/title"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewEntryAuthor"
+        app:layout_constraintEnd_toStartOf="@+id/btnEdit"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,19 +42,26 @@
         android:text="@string/year"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/divider"
+        app:layout_constraintEnd_toStartOf="@+id/btnEdit"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/textViewEntryAuthor" />
 
     <TextView
         android:id="@+id/textViewEntryAuthor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="10dp"
+        android:layout_marginEnd="16dp"
         android:layout_weight="1"
+        android:ellipsize="end"
         android:fontFamily="@font/inter_medium"
+        android:maxLines="1"
         android:text="@string/author"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewEntryYear"
+        app:layout_constraintEnd_toStartOf="@+id/btnEdit"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/textViewEntryTitle" />
 
