--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,10 @@
     <color name="cinnabar">#D64933</color>
     <color name="cream">#F5F3ED</color>
     <color name="gold">#D4AF37</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
+    <color name="light_blue_A200">#FF40C4FF</color>
+    <color name="light_blue_A400">#FF00B0FF</color>
+    <color name="black_overlay">#66000000</color>
+    <color name="my_statusbar_color">#000000</color>
 </resources>
