--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,20 +20,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/fabAddNew"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="40dp"
-        android:backgroundTint="@color/spanish_viridian"
+        android:backgroundTint="@color/teal_700"
         android:backgroundTintMode="src_atop"
         android:contentDescription="@string/add_new_book"
-        android:src="@drawable/ic_plus"
-        app:fabSize="normal"
+        android:fontFamily="@font/inter_semibold"
+        android:text="@string/floating_button_text"
+        android:textColor="@color/white"
+        app:icon="@drawable/ic_plus"
+        app:iconTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@color/white" />
+        app:shapeAppearanceOverlay="@style/FabShape2"/>
 
     <TextView
         android:id="@+id/textViewNoItem"
