--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.Booklat" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
@@ -6,11 +6,11 @@
         <item name="colorPrimaryVariant">@color/spanish_viridian_dark</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/spanish_viridian</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/black</item>
+        <item name="android:statusBarColor" >@color/black</item>
 
         <!-- Customize your theme here. -->
 
@@ -19,21 +19,6 @@
         <item name="android:windowEnterAnimation">@null</item>
         <item name="android:windowExitAnimation">@null</item>
 
-    </style>
-
-    <style name="Theme.Booklat.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="Theme.Booklat.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="Theme.Booklat.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
-    <style name="Theme.Booklat.Fullscreen" parent="Theme.Booklat">
-        <item name="android:actionBarStyle">@style/Widget.Theme.Booklat.ActionBar.Fullscreen</item>
-        <item name="android:windowActionBarOverlay">true</item>
-        <item name="android:windowBackground">@null</item>
     </style>
 
     <style name="ThemeOverlay.Booklat.FullscreenContainer" parent="">
@@ -45,13 +30,6 @@
     <!--CUSTOM FLOATING ACTION BUTTON STYLE-->
 
     <!-- Pointed Top -->
-    <style name="FabShape1" parent="">
-        <item name="cornerSize">50%</item>
-        <item name="cornerFamilyTopLeft">cut</item>
-        <item name="cornerFamilyTopRight">cut</item>
-        <item name="cornerFamilyBottomLeft">rounded</item>
-        <item name="cornerFamilyBottomRight">rounded</item>
-    </style>
 
     <!-- Square with rounded corners -->
     <style name="FabShape2" parent="">
@@ -59,17 +37,7 @@
     </style>
 
     <!-- Diamond -->
-    <style name="FabShape3" parent="">
-        <item name="cornerSize">50%</item>
-        <item name="cornerFamily">cut</item>
-    </style>
 
     <!-- Fan -->
-    <style name="FabShape4" parent="">
-        <item name="cornerSize">0dp</item>
-        <item name="cornerSizeTopLeft">80%</item>
-        <item name="cornerFamily">cut</item>
-        <item name="cornerFamilyTopLeft">rounded</item>
-    </style>
 
 </resources>
