--- a/app/src/main/res/layout/dialog_add_book_layout.xml
+++ b/app/src/main/res/layout/dialog_add_book_layout.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:autofillHints="@string/year">
@@ -80,6 +79,8 @@
         android:fontFamily="@font/inter_regular"
         android:hint="@string/enter_year"
         android:inputType="number"
+        android:maxLength="4"
+        android:maxLines="1"
         android:minHeight="48dp"
         android:textColorHint="#757575"
         android:textSize="16sp"
