--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -10,7 +10,12 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" >@color/black</item>
+        <item name="android:statusBarColor">@color/black</item>
+
+        <!-- Navigation bar color -->
+        <item name="android:navigationBarColor">@color/material_dark_darker</item>
+        <item name="android:windowLightNavigationBar">false</item>
+
 
         <!-- Customize your theme here. -->
 
