--- a/app/src/main/res/layout/single_item_v2.xml
+++ b/app/src/main/res/layout/single_item_v2.xml
@@ -57,7 +57,7 @@
         android:text="@string/author"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/btnMenu"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/icBook"
         app:layout_constraintTop_toBottomOf="@+id/textViewEntryTitle" />
 
     <View
@@ -73,10 +73,11 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/icBook"
         android:layout_width="48dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
+        android:clickable="true"
         android:contentDescription="@string/book_icon"
         app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintStart_toStartOf="parent"
